@@ -3,20 +3,17 @@
 ####################################################################
 
 New stuff:
-	* ./powerman  -x --list --noexec snerg[1-4.] snerg5
-	  powerman: Assertion failed: pm_string.c, line 109
 	* connected to powerman daemon, "names toad[" crashes server
 	* should be possible to query status of individual nodes
 	  (i.e. if I want to know if mcr42 is on, shouldn't have to touch
 	  every ice box)  "update plugs" and "update nodes" take no args.
-	* with two ice boxes, second one listed in config file is always
-	  in ? state
-
+	* Remove cruft associated with "completion" regex, e.g. makeScriptEl()
+	  third argument should go away and everything beneath it.
+	  
 Andrew's old list:
 	* telnet based query and control for icebox
 	* introduce configuration generator (2 days)
 	* adapt packaging to use autoconf stuff (4 days)
-	* update rpm make targets to Chris' latest (1 day)
 	* review gpg use (0.5 days)
 	* package vicebox for distribution
 	* Envrionment variable(s) - config file, ...
